[package]
name = "parrot"
version = "1.0.6"
description = "A Rust GUI in Tauri for the Arch Linux package manager, pacman using the wrapper paru"
authors = ["DanCodes"]
license = "MIT"
repository = "https://github.com/dan-online/Parrot"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = ["reqwest-native-tls-vendored", "shell-open", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23",  features = ["blocking", "json"] }
ts-rs = "7.0"
scraper = "0.18.1"
sled = "0.34.7"
zstd = "0.13.0"
tar = "0.4.40"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
