[package]
name = "parrot"
version = "1.0.6"
description = "A Rust GUI in Tauri for the Arch Linux package manager, pacman using the wrapper paru"
authors = ["DanCodes"]
license = "MIT"
repository = "https://github.com/dan-online/Parrot"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["reqwest-native-tls-vendored", "shell-open", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4",  features = ["blocking", "json"] }
ts-rs = "10.0"
scraper = "0.22.0"
sled = "0.34.7"
zstd = "0.13.1"
tar = "0.4.40"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
